# Constructor-Tech-Hackathon

./: README.md  dump.rdb
backend/: .gitignore  Dockerfile  README.md  alembic.ini  create_db.py  docker-compose.yml  pyproject.toml  requirements-extra.txt  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  deps.py
backend/app/api/v1/: __init__.py  admin_routes.py  agent_routes.py  assistant_routes.py  chat_routes.py  course_routes.py  market_routes.py  rag_routes.py  research_routes.py  session_routes.py  stream_routes.py
backend/app/core/: __init__.py  celery_app.py  config.py  http_client.py  llm.py  logging.py  observability.py  openai_client.py  search.py  security.py
backend/app/db/: __init__.py  base.py  models.py  session.py
backend/app/llm/: __init__.py  agent_registry.py  planner.py
backend/app/repositories/: __init__.py  agent_repo.py  chat_repo.py  user_repo.py
backend/app/schemas/: __init__.py  agent.py  chat.py  common.py  company.py  research.py  session.py  user.py
backend/app/services/: __init__.py  agent_service.py  analytics_service.py  chat_service.py  history_service.py  rag_service.py  research_service.py  session_service.py  tool_service.py
backend/app/utils/: __init__.py  errors.py  id_gen.py  timing.py
backend/app/workers/: __init__.py  scheduler.py  tasks.py
backend/scripts/: check_database.py  create_admin.py  dev_seed.py  fix_database.py  init_db.py  migrate_db.py
backend/tests/: test_agent_logic.py  test_chat_api.py  test_repositories.py  test_tools.py
frontend/: .gitignore  (+6 more)
(+44 files in other folders)
